--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,24 @@
-name: 'FindCode Scanner'
-description: '使用 FindCode 工具扫描 Go 代码中的 API 定义'
+name: FindCode Action
+description: 'Run FindCode scanning tool'
 inputs:
-  code_type:
-    description: '代码框架类型 (trpc/go_swagger/gin)'
+  target-path:
+    description: 'Path to the target code'
     required: true
-    default: 'go_swagger'
-  go_target:
-    description: '扫描的目标代码路径'
+  code-type:
+    description: 'Types of code frameworks'
     required: true
-    default: '.'
-  report_path:
-    description: '报告输出路径'
+  output-report:
+    description: 'Path to the output report'
+    required: true
+  target-code:
+    description: 'Fill in the scan logic through functions supported by the rules engine'
     required: false
-    default: '/github/workspace/scan-report.json'
-outputs:
-  report-path:
-    description: '生成的报告路径'
+    default: 'true'
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.code_type }}
-    - ${{ inputs.go_target }}
-    - ${{ inputs.report_path }}
+    - ${{ inputs.target-path }}
+    - ${{ inputs.code-type }}
+    - ${{ inputs.output-report }}
+    - ${{ inputs.target-code }}
